Apply SonarLint for Java21 features and remove old unused redirectError method